Login Update and JDL Changes

--- a/src/main/webapp/app/entities/login-profile/detail/login-profile-detail.component.html
+++ b/src/main/webapp/app/entities/login-profile/detail/login-profile-detail.component.html
@@ -26,6 +26,10 @@
         <dd>
           <span>{{ loginProfile.memberType }}</span>
         </dd>
+        <dt><span>Member Id</span></dt>
+        <dd>
+          <span>{{ loginProfile.memberId }}</span>
+        </dd>
         <dt><span>Phone Number</span></dt>
         <dd>
           <span>{{ loginProfile.phoneNumber }}</span>
