--- a/src/main/webapp/app/entities/login-profile/update/login-profile-update.component.html
+++ b/src/main/webapp/app/entities/login-profile/update/login-profile-update.component.html
@@ -34,6 +34,11 @@
         </div>
 
         <div class="row mb-3">
+          <label class="form-label" for="field_memberId">Member Id</label>
+          <input type="text" class="form-control" name="memberId" id="field_memberId" data-cy="memberId" formControlName="memberId" />
+        </div>
+
+        <div class="row mb-3">
           <label class="form-label" for="field_phoneNumber">Phone Number</label>
           <input
             type="text"
