--- a/src/main/webapp/app/entities/category-type/list/category-type.component.html
+++ b/src/main/webapp/app/entities/category-type/list/category-type.component.html
@@ -1,6 +1,6 @@
 <div>
-  <h2 id="page-heading" data-cy="CategoryHeading">
-    <span>Categories</span>
+  <h2 id="page-heading" data-cy="CategoryTypeHeading">
+    <span>Category Types</span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
@@ -11,11 +11,11 @@
       <button
         id="jh-create-entity"
         data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-category"
-        [routerLink]="['/category/new']"
+        class="btn btn-primary jh-create-entity create-category-type"
+        [routerLink]="['/category-type/new']"
       >
         <fa-icon icon="plus"></fa-icon>
-        <span> Create a new Category </span>
+        <span> Create a new Category Type </span>
       </button>
     </div>
   </h2>
@@ -24,11 +24,11 @@
 
   <jhi-alert></jhi-alert>
 
-  <div class="alert alert-warning" id="no-result" *ngIf="categories?.length === 0">
-    <span>No Categories found</span>
+  <div class="alert alert-warning" id="no-result" *ngIf="categoryTypes?.length === 0">
+    <span>No Category Types found</span>
   </div>
 
-  <div class="table-responsive table-entities" id="entities" *ngIf="categories && categories.length > 0">
+  <div class="table-responsive table-entities" id="entities" *ngIf="categoryTypes && categoryTypes.length > 0">
     <table class="table table-striped" aria-describedby="page-heading">
       <thead>
         <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" (sortChange)="navigateToWithComponentValues()">
@@ -50,21 +50,15 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="imageUrl">
+          <th scope="col" jhiSortBy="icon">
             <div class="d-flex">
-              <span>Image Url</span>
+              <span>Icon</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
-          <th scope="col" jhiSortBy="description">
+          <th scope="col" jhiSortBy="bgColor">
             <div class="d-flex">
-              <span>Description</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
-          <th scope="col" jhiSortBy="status">
-            <div class="d-flex">
-              <span>Status</span>
+              <span>Bg Color</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
@@ -80,26 +74,32 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="status">
+            <div class="d-flex">
+              <span>Status</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let category of categories; trackBy: trackId" data-cy="entityTable">
+        <tr *ngFor="let categoryType of categoryTypes; trackBy: trackId" data-cy="entityTable">
           <td>
-            <a [routerLink]="['/category', category.id, 'view']">{{ category.id }}</a>
+            <a [routerLink]="['/category-type', categoryType.id, 'view']">{{ categoryType.id }}</a>
           </td>
-          <td>{{ category.title }}</td>
-          <td>{{ category.subTitle }}</td>
-          <td>{{ category.imageUrl }}</td>
-          <td>{{ category.description }}</td>
-          <td>{{ category.status }}</td>
-          <td>{{ category.country }}</td>
-          <td>{{ category.code }}</td>
+          <td>{{ categoryType.title }}</td>
+          <td>{{ categoryType.subTitle }}</td>
+          <td>{{ categoryType.icon }}</td>
+          <td>{{ categoryType.bgColor }}</td>
+          <td>{{ categoryType.country }}</td>
+          <td>{{ categoryType.code }}</td>
+          <td>{{ categoryType.status }}</td>
           <td class="text-end">
             <div class="btn-group">
               <button
                 type="submit"
-                [routerLink]="['/category', category.id, 'view']"
+                [routerLink]="['/category-type', categoryType.id, 'view']"
                 class="btn btn-info btn-sm"
                 data-cy="entityDetailsButton"
               >
@@ -109,7 +109,7 @@
 
               <button
                 type="submit"
-                [routerLink]="['/category', category.id, 'edit']"
+                [routerLink]="['/category-type', categoryType.id, 'edit']"
                 class="btn btn-primary btn-sm"
                 data-cy="entityEditButton"
               >
@@ -117,7 +117,7 @@
                 <span class="d-none d-md-inline">Edit</span>
               </button>
 
-              <button type="submit" (click)="delete(category)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
+              <button type="submit" (click)="delete(categoryType)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
                 <fa-icon icon="times"></fa-icon>
                 <span class="d-none d-md-inline">Delete</span>
               </button>
