Updated data tables

--- a/src/main/webapp/app/entities/deal-type/detail/deal-type-detail.component.html
+++ b/src/main/webapp/app/entities/deal-type/detail/deal-type-detail.component.html
@@ -14,17 +14,33 @@
         <dd>
           <span>{{ dealType.id }}</span>
         </dd>
-        <dt><span>Deal Type</span></dt>
+        <dt><span>Title</span></dt>
         <dd>
-          <span>{{ dealType.dealType }}</span>
+          <span>{{ dealType.title }}</span>
         </dd>
-        <dt><span>Description</span></dt>
+        <dt><span>Sub Title</span></dt>
         <dd>
-          <span>{{ dealType.description }}</span>
+          <span>{{ dealType.subTitle }}</span>
         </dd>
-        <dt><span>Image Url</span></dt>
+        <dt><span>Icon</span></dt>
         <dd>
-          <span>{{ dealType.imageUrl }}</span>
+          <span>{{ dealType.icon }}</span>
+        </dd>
+        <dt><span>Bg Color</span></dt>
+        <dd>
+          <span>{{ dealType.bgColor }}</span>
+        </dd>
+        <dt><span>Country</span></dt>
+        <dd>
+          <span>{{ dealType.country }}</span>
+        </dd>
+        <dt><span>Code</span></dt>
+        <dd>
+          <span>{{ dealType.code }}</span>
+        </dd>
+        <dt><span>Status</span></dt>
+        <dd>
+          <span>{{ dealType.status }}</span>
         </dd>
       </dl>
 
