--- a/src/main/webapp/app/entities/deal/detail/deal-detail.component.html
+++ b/src/main/webapp/app/entities/deal/detail/deal-detail.component.html
@@ -14,10 +14,6 @@
         <dd>
           <span>{{ deal.id }}</span>
         </dd>
-        <dt><span>Type</span></dt>
-        <dd>
-          <span>{{ deal.type }}</span>
-        </dd>
         <dt><span>Title</span></dt>
         <dd>
           <span>{{ deal.title }}</span>
@@ -90,9 +86,9 @@
         <dd>
           <span>{{ deal.merchant }}</span>
         </dd>
-        <dt><span>Category</span></dt>
+        <dt><span>Tags</span></dt>
         <dd>
-          <span>{{ deal.category }}</span>
+          <span>{{ deal.tags }}</span>
         </dd>
       </dl>
 
