--- a/src/main/webapp/app/entities/deal-type/update/deal-type-update.component.html
+++ b/src/main/webapp/app/entities/deal-type/update/deal-type-update.component.html
@@ -12,25 +12,38 @@
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_dealType">Deal Type</label>
-          <input type="text" class="form-control" name="dealType" id="field_dealType" data-cy="dealType" formControlName="dealType" />
+          <label class="form-label" for="field_title">Title</label>
+          <input type="text" class="form-control" name="title" id="field_title" data-cy="title" formControlName="title" />
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_description">Description</label>
-          <input
-            type="text"
-            class="form-control"
-            name="description"
-            id="field_description"
-            data-cy="description"
-            formControlName="description"
-          />
+          <label class="form-label" for="field_subTitle">Sub Title</label>
+          <input type="text" class="form-control" name="subTitle" id="field_subTitle" data-cy="subTitle" formControlName="subTitle" />
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_imageUrl">Image Url</label>
-          <textarea class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl"></textarea>
+          <label class="form-label" for="field_icon">Icon</label>
+          <input type="text" class="form-control" name="icon" id="field_icon" data-cy="icon" formControlName="icon" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_bgColor">Bg Color</label>
+          <input type="text" class="form-control" name="bgColor" id="field_bgColor" data-cy="bgColor" formControlName="bgColor" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_country">Country</label>
+          <input type="text" class="form-control" name="country" id="field_country" data-cy="country" formControlName="country" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_code">Code</label>
+          <input type="text" class="form-control" name="code" id="field_code" data-cy="code" formControlName="code" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_status">Status</label>
+          <input type="text" class="form-control" name="status" id="field_status" data-cy="status" formControlName="status" />
         </div>
       </div>
 
