--- a/src/main/webapp/app/entities/deal/update/deal-update.component.html
+++ b/src/main/webapp/app/entities/deal/update/deal-update.component.html
@@ -12,11 +12,6 @@
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_type">Type</label>
-          <input type="text" class="form-control" name="type" id="field_type" data-cy="type" formControlName="type" />
-        </div>
-
-        <div class="row mb-3">
           <label class="form-label" for="field_title">Title</label>
           <input type="text" class="form-control" name="title" id="field_title" data-cy="title" formControlName="title" />
         </div>
@@ -141,8 +136,8 @@
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_category">Category</label>
-          <input type="text" class="form-control" name="category" id="field_category" data-cy="category" formControlName="category" />
+          <label class="form-label" for="field_tags">Tags</label>
+          <input type="text" class="form-control" name="tags" id="field_tags" data-cy="tags" formControlName="tags" />
         </div>
       </div>
 
