--- a/src/main/webapp/app/entities/slide/detail/slide-detail.component.html
+++ b/src/main/webapp/app/entities/slide/detail/slide-detail.component.html
@@ -42,6 +42,10 @@
         <dd>
           <span>{{ slide.endDate }}</span>
         </dd>
+        <dt><span>Deal Url</span></dt>
+        <dd>
+          <span>{{ slide.dealUrl }}</span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
