--- a/src/main/webapp/app/entities/slide/list/slide.component.html
+++ b/src/main/webapp/app/entities/slide/list/slide.component.html
@@ -80,6 +80,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="dealUrl">
+            <div class="d-flex">
+              <span>Deal Url</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -95,6 +101,7 @@
           <td>{{ slide.country }}</td>
           <td>{{ slide.startDate }}</td>
           <td>{{ slide.endDate }}</td>
+          <td>{{ slide.dealUrl }}</td>
           <td class="text-end">
             <div class="btn-group">
               <button type="submit" [routerLink]="['/slide', slide.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
