--- a/src/main/webapp/app/entities/slide/update/slide-update.component.html
+++ b/src/main/webapp/app/entities/slide/update/slide-update.component.html
@@ -45,6 +45,11 @@
           <label class="form-label" for="field_endDate">End Date</label>
           <input type="text" class="form-control" name="endDate" id="field_endDate" data-cy="endDate" formControlName="endDate" />
         </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_dealUrl">Deal Url</label>
+          <input type="text" class="form-control" name="dealUrl" id="field_dealUrl" data-cy="dealUrl" formControlName="dealUrl" />
+        </div>
       </div>
 
       <div>
