--- a/src/main/webapp/app/entities/merchant/list/merchant.component.html
+++ b/src/main/webapp/app/entities/merchant/list/merchant.component.html
@@ -74,6 +74,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="siteUrl">
+            <div class="d-flex">
+              <span>Site Url</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -88,6 +94,7 @@
           <td>{{ merchant.storeIcon }}</td>
           <td>{{ merchant.type }}</td>
           <td>{{ merchant.location }}</td>
+          <td>{{ merchant.siteUrl }}</td>
           <td class="text-end">
             <div class="btn-group">
               <button
