--- a/src/main/webapp/app/entities/merchant/update/merchant-update.component.html
+++ b/src/main/webapp/app/entities/merchant/update/merchant-update.component.html
@@ -40,6 +40,11 @@
           <label class="form-label" for="field_location">Location</label>
           <input type="text" class="form-control" name="location" id="field_location" data-cy="location" formControlName="location" />
         </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_siteUrl">Site Url</label>
+          <input type="text" class="form-control" name="siteUrl" id="field_siteUrl" data-cy="siteUrl" formControlName="siteUrl" />
+        </div>
       </div>
 
       <div>
