--- a/src/main/webapp/app/entities/merchant/update/merchant-update.component.html
+++ b/src/main/webapp/app/entities/merchant/update/merchant-update.component.html
@@ -28,7 +28,7 @@
 
         <div class="row mb-3">
           <label class="form-label" for="field_storeIcon">Store Icon</label>
-          <textarea class="form-control" name="storeIcon" id="field_storeIcon" data-cy="storeIcon" formControlName="storeIcon"></textarea>
+          <input type="text" class="form-control" name="storeIcon" id="field_storeIcon" data-cy="storeIcon" formControlName="storeIcon" />
         </div>
 
         <div class="row mb-3">
@@ -43,7 +43,7 @@
 
         <div class="row mb-3">
           <label class="form-label" for="field_siteUrl">Site Url</label>
-          <input type="text" class="form-control" name="siteUrl" id="field_siteUrl" data-cy="siteUrl" formControlName="siteUrl" />
+          <textarea class="form-control" name="siteUrl" id="field_siteUrl" data-cy="siteUrl" formControlName="siteUrl"></textarea>
         </div>
       </div>
 
