--- a/src/main/webapp/app/entities/notification/update/notification-update.component.html
+++ b/src/main/webapp/app/entities/notification/update/notification-update.component.html
@@ -50,7 +50,7 @@
 
         <div class="row mb-3">
           <label class="form-label" for="field_imageUrl">Image Url</label>
-          <input type="text" class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl" />
+          <textarea class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl"></textarea>
         </div>
 
         <div class="row mb-3">
