--- a/src/main/webapp/app/entities/category/detail/category-detail.component.html
+++ b/src/main/webapp/app/entities/category/detail/category-detail.component.html
@@ -14,6 +14,10 @@
         <dd>
           <span>{{ category.id }}</span>
         </dd>
+        <dt><span>Parent</span></dt>
+        <dd>
+          <span>{{ category.parent }}</span>
+        </dd>
         <dt><span>Title</span></dt>
         <dd>
           <span>{{ category.title }}</span>
@@ -30,10 +34,6 @@
         <dd>
           <span>{{ category.description }}</span>
         </dd>
-        <dt><span>Status</span></dt>
-        <dd>
-          <span>{{ category.status }}</span>
-        </dd>
         <dt><span>Country</span></dt>
         <dd>
           <span>{{ category.country }}</span>
@@ -41,6 +41,10 @@
         <dt><span>Code</span></dt>
         <dd>
           <span>{{ category.code }}</span>
+        </dd>
+        <dt><span>Status</span></dt>
+        <dd>
+          <span>{{ category.status }}</span>
         </dd>
       </dl>
 
