--- a/src/main/webapp/app/entities/category/update/category-update.component.html
+++ b/src/main/webapp/app/entities/category/update/category-update.component.html
@@ -12,6 +12,11 @@
         </div>
 
         <div class="row mb-3">
+          <label class="form-label" for="field_parent">Parent</label>
+          <input type="text" class="form-control" name="parent" id="field_parent" data-cy="parent" formControlName="parent" />
+        </div>
+
+        <div class="row mb-3">
           <label class="form-label" for="field_title">Title</label>
           <input type="text" class="form-control" name="title" id="field_title" data-cy="title" formControlName="title" />
         </div>
@@ -28,18 +33,14 @@
 
         <div class="row mb-3">
           <label class="form-label" for="field_description">Description</label>
-          <textarea
+          <input
+            type="text"
             class="form-control"
             name="description"
             id="field_description"
             data-cy="description"
             formControlName="description"
-          ></textarea>
-        </div>
-
-        <div class="row mb-3">
-          <label class="form-label" for="field_status">Status</label>
-          <input type="text" class="form-control" name="status" id="field_status" data-cy="status" formControlName="status" />
+          />
         </div>
 
         <div class="row mb-3">
@@ -50,6 +51,11 @@
         <div class="row mb-3">
           <label class="form-label" for="field_code">Code</label>
           <input type="text" class="form-control" name="code" id="field_code" data-cy="code" formControlName="code" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_status">Status</label>
+          <input type="text" class="form-control" name="status" id="field_status" data-cy="status" formControlName="status" />
         </div>
       </div>
 
