added selected types and updated deal cards

--- a/src/main/webapp/app/entities/slide/detail/slide-detail.component.html
+++ b/src/main/webapp/app/entities/slide/detail/slide-detail.component.html
@@ -46,6 +46,10 @@
         <dd>
           <span>{{ slide.dealUrl }}</span>
         </dd>
+        <dt><span>Tags</span></dt>
+        <dd>
+          <span>{{ slide.tags }}</span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
