--- a/src/main/webapp/app/entities/slide/update/slide-update.component.html
+++ b/src/main/webapp/app/entities/slide/update/slide-update.component.html
@@ -50,6 +50,11 @@
           <label class="form-label" for="field_dealUrl">Deal Url</label>
           <input type="text" class="form-control" name="dealUrl" id="field_dealUrl" data-cy="dealUrl" formControlName="dealUrl" />
         </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_tags">Tags</label>
+          <input type="text" class="form-control" name="tags" id="field_tags" data-cy="tags" formControlName="tags" />
+        </div>
       </div>
 
       <div>
