--- a/src/main/webapp/app/entities/slide/list/slide.component.html
+++ b/src/main/webapp/app/entities/slide/list/slide.component.html
@@ -86,6 +86,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="tags">
+            <div class="d-flex">
+              <span>Tags</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -102,6 +108,7 @@
           <td>{{ slide.endDate }}</td>
           <td>{{ slide.imageUrl }}</td>
           <td>{{ slide.dealUrl }}</td>
+          <td>{{ slide.tags }}</td>
           <td class="text-end">
             <div class="btn-group">
               <button type="submit" [routerLink]="['/slide', slide.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
