--- a/src/main/webapp/app/entities/deal/detail/deal-detail.component.html
+++ b/src/main/webapp/app/entities/deal/detail/deal-detail.component.html
@@ -90,6 +90,14 @@
         <dd>
           <span>{{ deal.tags }}</span>
         </dd>
+        <dt><span>Brand</span></dt>
+        <dd>
+          <span>{{ deal.brand }}</span>
+        </dd>
+        <dt><span>Expired</span></dt>
+        <dd>
+          <span>{{ deal.expired }}</span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
