--- a/src/main/webapp/app/entities/deal/update/deal-update.component.html
+++ b/src/main/webapp/app/entities/deal/update/deal-update.component.html
@@ -139,6 +139,16 @@
           <label class="form-label" for="field_tags">Tags</label>
           <input type="text" class="form-control" name="tags" id="field_tags" data-cy="tags" formControlName="tags" />
         </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_brand">Brand</label>
+          <input type="text" class="form-control" name="brand" id="field_brand" data-cy="brand" formControlName="brand" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_expired">Expired</label>
+          <input type="checkbox" class="form-check" name="expired" id="field_expired" data-cy="expired" formControlName="expired" />
+        </div>
       </div>
 
       <div>
