--- a/src/main/webapp/app/entities/brand/detail/brand-detail.component.html
+++ b/src/main/webapp/app/entities/brand/detail/brand-detail.component.html
@@ -22,6 +22,10 @@
         <dd>
           <span>{{ brand.subTitle }}</span>
         </dd>
+        <dt><span>Code</span></dt>
+        <dd>
+          <span>{{ brand.code }}</span>
+        </dd>
         <dt><span>Status</span></dt>
         <dd>
           <span>{{ brand.status }}</span>
