--- a/src/main/webapp/app/entities/brand/update/brand-update.component.html
+++ b/src/main/webapp/app/entities/brand/update/brand-update.component.html
@@ -22,6 +22,11 @@
         </div>
 
         <div class="row mb-3">
+          <label class="form-label" for="field_code">Code</label>
+          <input type="text" class="form-control" name="code" id="field_code" data-cy="code" formControlName="code" />
+        </div>
+
+        <div class="row mb-3">
           <label class="form-label" for="field_status">Status</label>
           <input type="text" class="form-control" name="status" id="field_status" data-cy="status" formControlName="status" />
         </div>
@@ -33,7 +38,7 @@
 
         <div class="row mb-3">
           <label class="form-label" for="field_imageUrl">Image Url</label>
-          <textarea class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl"></textarea>
+          <input type="text" class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl" />
         </div>
       </div>
 
