--- a/src/main/webapp/app/entities/deal/list/deal.component.html
+++ b/src/main/webapp/app/entities/deal/list/deal.component.html
@@ -154,6 +154,18 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="brand">
+            <div class="d-flex">
+              <span>Brand</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
+          <th scope="col" jhiSortBy="expired">
+            <div class="d-flex">
+              <span>Expired</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -181,6 +193,8 @@
           <td>{{ deal.pinCode }}</td>
           <td>{{ deal.merchant }}</td>
           <td>{{ deal.tags }}</td>
+          <td>{{ deal.brand }}</td>
+          <td>{{ deal.expired }}</td>
           <td class="text-end">
             <div class="btn-group">
               <button type="submit" [routerLink]="['/deal', deal.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
