update deal table

--- a/src/main/webapp/app/entities/deal/detail/deal-detail.component.html
+++ b/src/main/webapp/app/entities/deal/detail/deal-detail.component.html
@@ -86,6 +86,10 @@
         <dd>
           <span>{{ deal.merchant }}</span>
         </dd>
+        <dt><span>Category</span></dt>
+        <dd>
+          <span>{{ deal.category }}</span>
+        </dd>
         <dt><span>Tags</span></dt>
         <dd>
           <span>{{ deal.tags }}</span>
