--- a/src/main/webapp/app/entities/deal/update/deal-update.component.html
+++ b/src/main/webapp/app/entities/deal/update/deal-update.component.html
@@ -29,12 +29,12 @@
 
         <div class="row mb-3">
           <label class="form-label" for="field_imageUrl">Image Url</label>
-          <textarea class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl"></textarea>
+          <input type="text" class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl" />
         </div>
 
         <div class="row mb-3">
           <label class="form-label" for="field_dealUrl">Deal Url</label>
-          <textarea class="form-control" name="dealUrl" id="field_dealUrl" data-cy="dealUrl" formControlName="dealUrl"></textarea>
+          <input type="text" class="form-control" name="dealUrl" id="field_dealUrl" data-cy="dealUrl" formControlName="dealUrl" />
         </div>
 
         <div class="row mb-3">
@@ -133,6 +133,11 @@
         <div class="row mb-3">
           <label class="form-label" for="field_merchant">Merchant</label>
           <input type="text" class="form-control" name="merchant" id="field_merchant" data-cy="merchant" formControlName="merchant" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_category">Category</label>
+          <input type="text" class="form-control" name="category" id="field_category" data-cy="category" formControlName="category" />
         </div>
 
         <div class="row mb-3">
