--- a/src/main/webapp/app/entities/deal/list/deal.component.html
+++ b/src/main/webapp/app/entities/deal/list/deal.component.html
@@ -148,6 +148,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="category">
+            <div class="d-flex">
+              <span>Category</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col" jhiSortBy="tags">
             <div class="d-flex">
               <span>Tags</span>
@@ -192,6 +198,7 @@
           <td>{{ deal.city }}</td>
           <td>{{ deal.pinCode }}</td>
           <td>{{ deal.merchant }}</td>
+          <td>{{ deal.category }}</td>
           <td>{{ deal.tags }}</td>
           <td>{{ deal.brand }}</td>
           <td>{{ deal.expired }}</td>
