--- a/src/main/webapp/app/entities/brand/detail/brand-detail.component.html
+++ b/src/main/webapp/app/entities/brand/detail/brand-detail.component.html
@@ -38,6 +38,10 @@
         <dd>
           <span>{{ brand.imageUrl }}</span>
         </dd>
+        <dt><span>Site Url</span></dt>
+        <dd>
+          <span>{{ brand.siteUrl }}</span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
