--- a/src/main/webapp/app/entities/brand/update/brand-update.component.html
+++ b/src/main/webapp/app/entities/brand/update/brand-update.component.html
@@ -40,6 +40,11 @@
           <label class="form-label" for="field_imageUrl">Image Url</label>
           <input type="text" class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl" />
         </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_siteUrl">Site Url</label>
+          <input type="text" class="form-control" name="siteUrl" id="field_siteUrl" data-cy="siteUrl" formControlName="siteUrl" />
+        </div>
       </div>
 
       <div>
