--- a/src/main/webapp/app/entities/deal-type/detail/deal-type-detail.component.html
+++ b/src/main/webapp/app/entities/deal-type/detail/deal-type-detail.component.html
@@ -42,6 +42,10 @@
         <dd>
           <span>{{ dealType.status }}</span>
         </dd>
+        <dt><span>Display</span></dt>
+        <dd>
+          <span>{{ dealType.display }}</span>
+        </dd>
       </dl>
 
       <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
