--- a/src/main/webapp/app/entities/deal-type/update/deal-type-update.component.html
+++ b/src/main/webapp/app/entities/deal-type/update/deal-type-update.component.html
@@ -45,6 +45,11 @@
           <label class="form-label" for="field_status">Status</label>
           <input type="text" class="form-control" name="status" id="field_status" data-cy="status" formControlName="status" />
         </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_display">Display</label>
+          <input type="checkbox" class="form-check" name="display" id="field_display" data-cy="display" formControlName="display" />
+        </div>
       </div>
 
       <div>
