--- a/src/main/webapp/app/entities/merchant/detail/merchant-detail.component.html
+++ b/src/main/webapp/app/entities/merchant/detail/merchant-detail.component.html
@@ -14,9 +14,25 @@
         <dd>
           <span>{{ merchant.id }}</span>
         </dd>
-        <dt><span>Name</span></dt>
+        <dt><span>Code</span></dt>
         <dd>
-          <span>{{ merchant.name }}</span>
+          <span>{{ merchant.code }}</span>
+        </dd>
+        <dt><span>Title</span></dt>
+        <dd>
+          <span>{{ merchant.title }}</span>
+        </dd>
+        <dt><span>Sub Title</span></dt>
+        <dd>
+          <span>{{ merchant.subTitle }}</span>
+        </dd>
+        <dt><span>Address</span></dt>
+        <dd>
+          <span>{{ merchant.address }}</span>
+        </dd>
+        <dt><span>Phone</span></dt>
+        <dd>
+          <span>{{ merchant.phone }}</span>
         </dd>
         <dt><span>Country</span></dt>
         <dd>
@@ -26,9 +42,9 @@
         <dd>
           <span>{{ merchant.city }}</span>
         </dd>
-        <dt><span>Store Icon</span></dt>
+        <dt><span>Image Url</span></dt>
         <dd>
-          <span>{{ merchant.storeIcon }}</span>
+          <span>{{ merchant.imageUrl }}</span>
         </dd>
         <dt><span>Type</span></dt>
         <dd>
@@ -41,6 +57,10 @@
         <dt><span>Site Url</span></dt>
         <dd>
           <span>{{ merchant.siteUrl }}</span>
+        </dd>
+        <dt><span>Status</span></dt>
+        <dd>
+          <span>{{ merchant.status }}</span>
         </dd>
       </dl>
 
