--- a/src/main/webapp/app/entities/slide/detail/slide-detail.component.html
+++ b/src/main/webapp/app/entities/slide/detail/slide-detail.component.html
@@ -42,6 +42,10 @@
         <dd>
           <span>{{ slide.imageUrl }}</span>
         </dd>
+        <dt><span>Merchant Icon</span></dt>
+        <dd>
+          <span>{{ slide.merchantIcon }}</span>
+        </dd>
         <dt><span>Deal Url</span></dt>
         <dd>
           <span>{{ slide.dealUrl }}</span>
