--- a/src/main/webapp/app/entities/brand/list/brand.component.html
+++ b/src/main/webapp/app/entities/brand/list/brand.component.html
@@ -74,6 +74,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="siteUrl">
+            <div class="d-flex">
+              <span>Site Url</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -88,6 +94,7 @@
           <td>{{ brand.status }}</td>
           <td>{{ brand.country }}</td>
           <td>{{ brand.imageUrl }}</td>
+          <td>{{ brand.siteUrl }}</td>
           <td class="text-end">
             <div class="btn-group">
               <button type="submit" [routerLink]="['/brand', brand.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
