--- a/src/main/webapp/app/entities/deal-type/list/deal-type.component.html
+++ b/src/main/webapp/app/entities/deal-type/list/deal-type.component.html
@@ -80,6 +80,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="display">
+            <div class="d-flex">
+              <span>Display</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -95,6 +101,7 @@
           <td>{{ dealType.country }}</td>
           <td>{{ dealType.code }}</td>
           <td>{{ dealType.status }}</td>
+          <td>{{ dealType.display }}</td>
           <td class="text-end">
             <div class="btn-group">
               <button
