--- a/src/main/webapp/app/entities/deal/update/deal-update.component.html
+++ b/src/main/webapp/app/entities/deal/update/deal-update.component.html
@@ -29,12 +29,12 @@
 
         <div class="row mb-3">
           <label class="form-label" for="field_imageUrl">Image Url</label>
-          <input type="text" class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl" />
+          <textarea class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl"></textarea>
         </div>
 
         <div class="row mb-3">
           <label class="form-label" for="field_dealUrl">Deal Url</label>
-          <input type="text" class="form-control" name="dealUrl" id="field_dealUrl" data-cy="dealUrl" formControlName="dealUrl" />
+          <textarea class="form-control" name="dealUrl" id="field_dealUrl" data-cy="dealUrl" formControlName="dealUrl"></textarea>
         </div>
 
         <div class="row mb-3">
