--- a/src/main/webapp/app/entities/merchant/update/merchant-update.component.html
+++ b/src/main/webapp/app/entities/merchant/update/merchant-update.component.html
@@ -12,8 +12,28 @@
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_name">Name</label>
-          <input type="text" class="form-control" name="name" id="field_name" data-cy="name" formControlName="name" />
+          <label class="form-label" for="field_code">Code</label>
+          <input type="text" class="form-control" name="code" id="field_code" data-cy="code" formControlName="code" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_title">Title</label>
+          <input type="text" class="form-control" name="title" id="field_title" data-cy="title" formControlName="title" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_subTitle">Sub Title</label>
+          <input type="text" class="form-control" name="subTitle" id="field_subTitle" data-cy="subTitle" formControlName="subTitle" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_address">Address</label>
+          <input type="text" class="form-control" name="address" id="field_address" data-cy="address" formControlName="address" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_phone">Phone</label>
+          <input type="text" class="form-control" name="phone" id="field_phone" data-cy="phone" formControlName="phone" />
         </div>
 
         <div class="row mb-3">
@@ -27,8 +47,8 @@
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_storeIcon">Store Icon</label>
-          <input type="text" class="form-control" name="storeIcon" id="field_storeIcon" data-cy="storeIcon" formControlName="storeIcon" />
+          <label class="form-label" for="field_imageUrl">Image Url</label>
+          <input type="text" class="form-control" name="imageUrl" id="field_imageUrl" data-cy="imageUrl" formControlName="imageUrl" />
         </div>
 
         <div class="row mb-3">
@@ -43,7 +63,12 @@
 
         <div class="row mb-3">
           <label class="form-label" for="field_siteUrl">Site Url</label>
-          <textarea class="form-control" name="siteUrl" id="field_siteUrl" data-cy="siteUrl" formControlName="siteUrl"></textarea>
+          <input type="text" class="form-control" name="siteUrl" id="field_siteUrl" data-cy="siteUrl" formControlName="siteUrl" />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_status">Status</label>
+          <input type="text" class="form-control" name="status" id="field_status" data-cy="status" formControlName="status" />
         </div>
       </div>
 
