--- a/src/main/webapp/app/entities/deal/update/deal-update.component.html
+++ b/src/main/webapp/app/entities/deal/update/deal-update.component.html
@@ -38,6 +38,11 @@
         </div>
 
         <div class="row mb-3">
+          <label class="form-label" for="field_highlight">Highlight</label>
+          <input type="text" class="form-control" name="highlight" id="field_highlight" data-cy="highlight" formControlName="highlight" />
+        </div>
+
+        <div class="row mb-3">
           <label class="form-label" for="field_postedBy">Posted By</label>
           <input type="text" class="form-control" name="postedBy" id="field_postedBy" data-cy="postedBy" formControlName="postedBy" />
         </div>
@@ -86,6 +91,11 @@
             data-cy="currentPrice"
             formControlName="currentPrice"
           />
+        </div>
+
+        <div class="row mb-3">
+          <label class="form-label" for="field_priceTag">Price Tag</label>
+          <input type="text" class="form-control" name="priceTag" id="field_priceTag" data-cy="priceTag" formControlName="priceTag" />
         </div>
 
         <div class="row mb-3">
