--- a/src/main/webapp/app/entities/deal/detail/deal-detail.component.html
+++ b/src/main/webapp/app/entities/deal/detail/deal-detail.component.html
@@ -30,6 +30,10 @@
         <dd>
           <span>{{ deal.dealUrl }}</span>
         </dd>
+        <dt><span>Highlight</span></dt>
+        <dd>
+          <span>{{ deal.highlight }}</span>
+        </dd>
         <dt><span>Posted By</span></dt>
         <dd>
           <span>{{ deal.postedBy }}</span>
@@ -53,6 +57,10 @@
         <dt><span>Current Price</span></dt>
         <dd>
           <span>{{ deal.currentPrice }}</span>
+        </dd>
+        <dt><span>Price Tag</span></dt>
+        <dd>
+          <span>{{ deal.priceTag }}</span>
         </dd>
         <dt><span>Discount</span></dt>
         <dd>
